# protobuf-test

./: .tool-versions  README.md  compile.sh  pyproject.toml
app/: main.py  v1.py  v2.py
proto/input/: example_v2.proto  filelist.txt
proto/output/v1/: example_v1_pb2.py  example_v1_pb2.pyi  example_v2.proto
proto/output/v2/: example_v1.proto  example_v2_pb2.py  example_v2_pb2.pyi
