[tool.poetry]
name = "prototest"
version = "0.1.0"
description = ""
authors = ["Kyle Putnam <kyle@query.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^4.25.0"
isort = "^5.12.0"
pyright = "^1.1.335"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
